syntax = "proto3";

option csharp_namespace = "RemoteControlGrpcService";

import "google/protobuf/empty.proto";

package remoteController;

// The greeting service definition.
service RemoteController {
  // Sends a greeting
  rpc GetInstructions (google.protobuf.Empty) returns (stream CommandReply);
  rpc Ping (google.protobuf.Empty) returns (Pong);
}

message CommandReply {
  int32 direction = 1;
  int32 distance = 2;
}

message Pong {
	string message = 1;
}
